src/main/java/org/example/error/exception/SemanticException.java
package org.example.error.exception;

public class SemanticException extends Exception {

	public SemanticException(String errorMessage) {
		super(errorMessage);
	}

}
